<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/newNoteLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/candal"
        android:text="@string/create_a_new_note"
        android:textColor="@color/material_dynamic_primary20"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@color/material_dynamic_secondary70"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_note_title"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/enterNoteContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/enterNoteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:background="@color/material_dynamic_secondary70"
        android:fontFamily="@font/roboto"
        android:gravity="top|start"
        android:hint="@string/enter_your_note_here"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/save_note"
        android:contentDescription="@string/description_saveNoteButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNoteContent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>


